# Quantnomicon

./: .gitignore  README.md
finding_alphas/part1/: introduction_to_design_alpha.md
hypothesis/: hypo.canvas
load_data/: Cargo.toml
load_data/examples/: future-candles.rs  future-make-list.rs  future-plot.rs  future-trend.rs
load_data/src/: data.rs
quant_basic/: data_sources
