[package]
name = "load_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "load_data"
#path = "src/lib.rs"

[features]

[dependencies]
chrono = "0.4"
tokio = "1.14"
binance-rs-async = { version = "1.1.5", features = ["futures_api"] }


[dev-dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
csv = "1.1"
serde = "1.0"
plotters = "0.3.1"

polars = { version = "0.22", features = ["lazy", "csv-file", "timezones", "rolling_window", "cum_agg", "abs"] }
